text align fix

--- a/src/components/StatCard/StatCard.module.css
+++ b/src/components/StatCard/StatCard.module.css
@@ -1,5 +1,5 @@
 
-.h3 {
+.desc {
     text-align: left
 }
 .number {
